# julynter

./: .eslintrc.js  .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  create_julynterlab.sh  experiment.md  install.json  package.json  pyproject.toml  setup.py  tfic.md
.github/workflows/: build.yml
docs/: expconfig.html  experiment.html  expstop.html  index.html  tfic.html
docs/css/: style.css
julynter/: __init__.py  __main__.py  _version.py  cmd.py  config.py  handlers.py  kernel.py  oldcmd.py  util.py
julynter/cmd/: __init__.py  env.py  experiment.py  extractpipenv.py  julynterlab.py  run.py  validate.py
julynter/environments/: base.py  conda.py  docker.py  imports.py  orchestrator.py  process.py  venv.py
julynter/kernel/: __init__.py  ast_visitors.py  jcomm.py  linter.py
julynter/runner/: compare.py  consts.py  preprocessors.py  runner.py
jupyter-config/: julynter.json
jupyter-config/nb-config/: julynter.json
jupyter-config/server-config/: julynter.json
src/: iconimports.ts  index.ts  julynter.tsx  registry.ts  server.ts
src/generators/: errors.ts  heading.ts  index.ts  itemgenerators.ts  itemrenderer.tsx  optionsmanager.ts  toolbargenerator.tsx
src/kernel/: handler.ts  julynterkernel.ts  kernelconnector.ts  languages.ts
src/linter/: errors.ts  interfaces.ts  languages.ts  lint.ts  options.ts  reports.ts
src/linterlab/: config.ts  errorhandler.ts  experimentmanager.ts  itemgenerator.ts  julynter.tsx  julynternotebook.ts  notebookhandler.ts  registry.ts  (+1 more)
style/: index.css
tests/: TestJulynterUsingSelenium.ipynb
(+207 files in other folders)
